Added Swedbank data parser, added archiving feature

--- a/Ed.BudgetVisualizer.Test/Ed.BudgetVisualizer.Test.csproj
+++ b/Ed.BudgetVisualizer.Test/Ed.BudgetVisualizer.Test.csproj
@@ -29,7 +29,10 @@
     <None Update="Resources\TestCategories.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\TestData.csv">
+    <None Update="Resources\TestSebData.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\TestSwedbankData.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
