--- a/Ed.BudgetVisualizer/Ed.BudgetVisualizer.csproj
+++ b/Ed.BudgetVisualizer/Ed.BudgetVisualizer.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor.Extensions.Storage" Version="1.0.0" />
-    <PackageReference Include="BlazorInputFile" Version="0.1.0-preview" />
+    <PackageReference Include="BlazorInputFile" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.0.0-preview9.19465.2" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0.0-preview9.19465.2" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.0.0-preview9.19465.2" />
