--- a/Ed.BudgetVisualizer.Test/Ed.BudgetVisualizer.Test.csproj
+++ b/Ed.BudgetVisualizer.Test/Ed.BudgetVisualizer.Test.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\TestCategories.json">
+    <None Update="Resources\TestMatches.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\TestSebData.csv">
