--- a/Ed.BudgetVisualizer/Ed.BudgetVisualizer.csproj
+++ b/Ed.BudgetVisualizer/Ed.BudgetVisualizer.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\data\categories.json">
+    <Content Update="wwwroot\data\*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
